// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should match snapshot when empty 1`] = `
<span
  class="root sizeScale4"
/>
`;

exports[`<Text /> should match snapshot with text 1`] = `
<span
  class="root sizeScale4"
>
  Hello World
</span>
`;

exports[`<Text /> when muted should match snapshot 1`] = `
<span
  class="root sizeScale4 muted"
>
  Hello World
</span>
`;
